# rs-fullstack

./: .env  .gitignore  Cargo.toml  Dockerfile  config.toml  config.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-7b6b50fa6fb2561b6f443389de78f2f0d1dcb29ed7510fad9ef1e2116a99997f.json  query-e0006fe723b8ef90731ac81f37e4f7bc2653ccf5c9db19a111a7a1829cf78011.json
config/: base.toml
migrations/: 20240220202043_create_users_table.sql
scripts/: dev.sh  init_postgres.sh
src/: config.rs  crypto.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: data.rs  mod.rs  sanitize.rs  user.rs
src/routes/: health_check.rs  users.rs
tests/: health_check.rs
