[package]
name = "rs-fullstack"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rs-fullstack"

[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
config = "0.14.0"
futures = "0.3.30"
futures-core = "0.3.30"
rstest = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v7", "v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.11"
