[package]
name = "rsfullstack"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rsfullstack"

[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
config = "0.14.0"
futures = "0.3.30"
futures-core = "0.3.30"
rstest = "0.18.2"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v7", "v4"] }
tracing = { version = "0.1.27", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"
unicode-segmentation = "1.11.0"
validator = { version = "0.17.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
